tdf#152964 sw: fix crash of Undo of tracked deletion of empty table rows

In Hide Changes mode, Undo of insertion of CH_TXT_TRACKED_DUMMY_CHAR
(workaround of the deletion of empty table rows), resulted a crash
because of inconsistency of table and redline nodes. As a workaround,
skip that insertion from the Undo.

Regression from commit a74c51025fa4519caaf461492e4ed8e68bd34885
"tdf#146962 sw: hide deleted row at deletion in Hide Changes".

Change-Id: I0666d7bcbbf08d84386cea64c1807f69f751479d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145737
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 4e72e646255624eda698da750383a5725e8f6c4c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145718
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
(cherry picked from commit 6d47b8a09f51357851cdfa752f231ed10328b8f2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146754
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>